--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <img src="./profile.jpg" alt="Profile Picture" class="profile-img">
-            <h1>John Doe</h1>
+            <img src="myPhoto1.jpg" alt="Profile Picture" class="profile-img">
+            <h1>Seshilina Biswal</h1>
             <p>Web Developer & Designer</p>
         </div>
     </section>
